# OTUS_Prof_DZ_04

./: .gitignore  CMakeLists.txt  README.md  print_ip.cpp
.github/workflows/: print_ip.yml
doxygen/: dconf
doxygen/html/: annotated.html  classes.html  index.html  menudata.js  structis_conteiner-members.html  structis_conteiner.html  structis_conteiner_3_01std_1_1list_3_01int_01_4_01_4-members.html  structis_conteiner_3_01std_1_1list_3_01int_01_4_01_4.html  structis_conteiner_3_01std_1_1vector_3_01int_01_4_01_4-members.html  structis_conteiner_3_01std_1_1vector_3_01int_01_4_01_4.html
doxygen/html/search/: classes_0.js  searchdata.js
doxygen/latex/: annotated.tex  refman.tex  structis_conteiner.tex  structis_conteiner_3_01std_1_1list_3_01int_01_4_01_4.tex  structis_conteiner_3_01std_1_1vector_3_01int_01_4_01_4.tex
test/: print_ip_gtest.cpp  print_ip_gtest.h
